--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Personalized Web Rewriter",
-  "version": "0.1.0",
-  "description": "Rewrites web pages based on your knowledge.",
-  "permissions": ["storage", "activeTab", "scripting", "unlimitedStorage"],
+  "version": "1.0.0",
+  "description": "Rewrites web page content in real-time based on your needs.",
+  "permissions": ["scripting"],
   "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js"
@@ -11,8 +11,14 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
+      "exclude_matches": [
+        "*://*.google.com/*",
+        "*://*.youtube.com/*",
+        "*://*.instagram.com/*"
+      ],
       "js": ["content.js"],
-      "run_at": "document_start"
+      "run_at": "document_start",
+      "all_frames": true
     }
   ],
   "action": {
