--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ venv/
 .env
 .env.*
 .python-version
+backend/__pycache__
 
 # Explanation:
 # - 'venv/' and '.venv/' are common virtual environment folders.
