--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -20,7 +20,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      // "exclude_matches": ["*://*.youtube.com/*", "*://*.instagram.com/*"],
+      "exclude_matches": ["*://*.youtube.com/*", "*://*.instagram.com/*"],
       "js": ["content.js"],
       "run_at": "document_start",
       "all_frames": true
