--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ venv/
 .python-version
 backend/__pycache__
 
+node_modules/
+
 # Explanation:
 # - 'venv/' and '.venv/' are common virtual environment folders.
 # - '.env' and '.env.*' ignore environment files that may store API keys or secrets.
